[package]
name = "ez_alphabet"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2021"
license = "MIT"
description = "EZ Alphabets."
homepage = "https://github.com/replicadse/ez_alphabet"
repository = "https://github.com/replicadse/ez_alphabet"
keywords = ["ez_alphabet", "alphabet"]
categories = ["encoding"]
readme = "docs/README.md"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.199", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.116"
rusty-hook = "0.11.2"
